@@ -1,0 +1,7 @@
+package org.apache.cayenne.testdo.r1;
+
+import org.apache.cayenne.testdo.r1.auto._Activity;
+
+public class Activity extends _Activity {
+
+}
