@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <domain project-version="6">
 	<map name="relationships"/>
+	<map name="relationships1"/>
 </domain>
