@@ -30,6 +30,7 @@ Bug Fixes:
 CAY-1695 Unexpected null value in bidirectional one-to-one prefetch 
 CAY-1736 IllegalArgumentException when synchronizing entities in the Modeler
 CAY-1818 Fix copyright year in the Modeler "about" panel
+CAY-1834 Exception: ToManyList cannot be cast to DataObject 
 CAY-1857 Problem with hotkeys 
 CAY-1859 NullPointerException when importing EOModel 
 
